shipwright/manifests/node/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: taxi-app
    app.kubernetes.io/component: taxi-app
    app.kubernetes.io/instance: taxi-app
    app.kubernetes.io/name: taxi-app
    app.kubernetes.io/part-of: taxi-app
  name: taxi-app
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: 3000-tcp
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: taxi-app
    deployment: taxi-app
  sessionAffinity: None
  type: ClusterIP
